<resources>
    <string name="app_name">Quiz App</string>
    <string name="welcome">Welcome To Quiz App</string>
    <string name="name_lbl">Name</string>
    <string name="nameHint">Enter your name</string>
    <string name="id_lbl">ID</string>
    <string name="idHint">Enter your ID</string>
    <string name="exam_policy">* Please know that you should enter your name and id correctly. \n* Note that your exam has to be finished within 15 minutes.\n* If timer has ended your exam will close automatically and all un answered questions will be wrong </string>
    <string name="agreement_hint">I had read carefully all the Instructions.</string>
    <string name="start_exam">Start Exam</string>
    <string name="toast_inCompleted_data">Please enter your name and id correctly</string>
    <string name="question1">1. In Microsoft Excel columns are in</string>
    <string name="q1_a1">a) Numbers</string>
    <string name="q1_a2">b) Letters</string>
    <string name="q1_a3">c) Both (a) and (b)</string>
    <string name="q1_a4">d) None of the above</string>
    <string name="question2">2. In Microsoft Excel Rows are in</string>
    <string name="q2_a1">a) Numbers</string>
    <string name="q2_a2">b) Letters</string>
    <string name="q2_a3">c) Both (a) and (b</string>
    <string name="q2_a4">d) None of the above</string>
    <string name="question3">3. In Excel starting number is 1 and ending number is ---</string>
    <string name="q3_a1">a) 1,000,560</string>
    <string name="q3_a2">b) 1,000,586</string>
    <string name="q3_a3">c) 1,048,576</string>
    <string name="q3_a4">d) Infinite</string>
    <string name="question4">4. Cell defined as</string>
    <string name="q4_a1">a) Cobination of Rows and Column</string>
    <string name="q4_a2">b) Row only</string>
    <string name="q4_a3">c) Column only</string>
    <string name="q4_a4">d) None of the above</string>
    <string name="question5">5. You can set Page Border in Excel from</string>
    <string name="q5_a1">a) From Border tab in Format Cells dialog box</string>
    <string name="q5_a2">b) From Border tool in Formatting toolbar</string>
    <string name="q5_a3">c) From Line Style tool in Drawing toolbar</string>
    <string name="q5_a4">d) You can not set page border in Excel</string>
    <string name="question6">6. How do you display current date only in MS Excel?</string>
    <string name="q6_a1">a) date()</string>
    <string name="q6_a2">b) Today()</string>
    <string name="q6_a3">c) now()</string>
    <string name="q6_a4">d) time()</string>
    <string name="question7">7. Excel is for preparing a slide show ?</string>
    <string name="q7_hint">Please write down here your answer....(yes or no) is the answer ?</string>
    <string name="finish_exam">Finish Exam and get Result</string>
    <string name="result_header"><u>Your Result is :-</u></string>
    <string name="studentName">Name : </string>
    <string name="studentID">ID :</string>
    <string name="studentScore_part1">Your score is :</string>
    <string name="studentScore_part2"> out of 7</string>
    <string name="studentPercentage">Your percentage is :</string>
    <string name="studentState_part1">You are</string>
    <string name="studentPass"> Passed</string>
    <string name="studentFail"> Failed</string>
</resources>
