<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity"
    android:paddingStart="15dp"
    android:paddingEnd="15dp">

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/resultHeader"
        android:text="@string/result_header"
        android:layout_marginTop="20dp"/>
    <TextView
        android:id="@+id/student_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header"
        android:text="@string/studentName"
        style="@style/resultElemnts"/>
    <TextView
        android:id="@+id/student_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/resultElemnts"
        app:layout_constraintTop_toBottomOf="@id/student_name"
        android:text="@string/studentID"/>
    <TextView
        android:id="@+id/student_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/resultElemnts"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/student_id"
        android:text="@string/studentScore_part1"/>
    <TextView
        android:id="@+id/student_percentage"
        android:layout_width="wrap_content"
        style="@style/resultElemnts"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/student_score"
        android:text="@string/studentPercentage"/>
    <TextView
        android:id="@+id/student_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/resultState"
        app:layout_constraintTop_toBottomOf="@id/student_percentage"
        android:text="@string/studentState_part1"/>

</androidx.constraintlayout.widget.ConstraintLayout>